--- a/src/scss/theme/typography.scss
+++ b/src/scss/theme/typography.scss
@@ -1,5 +1,5 @@
 .osb-pocket-poke-holder {
-  h1, h2, h3, h4, p {
+  h1, h2, h3, h4, h5, p {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     color: $color-black;
