--- a/src/scss/theme/colours.scss
+++ b/src/scss/theme/colours.scss
@@ -3,6 +3,11 @@ $color-black:       #000;
 $azures-radiance:   #007FEB;
 $anikwa:            #A8D7FF;
 $malibu:            #5AB0FA;
+// Button colours
+$cerulean:            #00AAF2;
+$azure-radiance:      #0285E3;
+$endeavour:           #0065AD;
+$prussian-blue:       #002A47;
 //Pokemon type colours
 $selective-yellow:  #FFB300; // Fire
 $robins-egg-blue:   #00BDD6; // Water
@@ -12,7 +17,7 @@ $morning-glory:     #A2D3DE; // Ice
 $guardsman-red:     #CC0000; // Fighting
 $purple:            #6600CC; // Poison
 $raw-umber:         #804B13; // Ground
-$prelude:           #D2C1E3; // Flying
+$bright-turquoise:  #00DCF5; // Flying
 $fushia:            #FF00EA; // Psychic
 $limeade:           #37AB02; // Bug
 $gray:              #808080; // Rock
