--- a/src/css/osbPocketPoke.css
+++ b/src/css/osbPocketPoke.css
@@ -1,7 +1,22 @@
-.osb-pocket-poke-holder h1, .osb-pocket-poke-holder h2, .osb-pocket-poke-holder h3, .osb-pocket-poke-holder h4, .osb-pocket-poke-holder p {
+.osb-pocket-poke-holder h1, .osb-pocket-poke-holder h2, .osb-pocket-poke-holder h3, .osb-pocket-poke-holder h4, .osb-pocket-poke-holder h5, .osb-pocket-poke-holder p {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   color: #000; }
+
+.osb-pocket-poke-holder .btn-primary {
+  background-color: #0285E3;
+  background-image: none;
+  box-shadow: 0 2px 0 0 rgba(0, 42, 71, 0.7);
+  border: 0; }
+  .osb-pocket-poke-holder .btn-primary:hover {
+    background-color: #0065AD; }
+  .osb-pocket-poke-holder .btn-primary:active, .osb-pocket-poke-holder .btn-primary.active {
+    background-color: #0065AD;
+    box-shadow: none;
+    margin-bottom: -2px;
+    margin-top: 2px; }
+  .osb-pocket-poke-holder .btn-primary:focus {
+    outline: none; }
 
 @font-face {
   font-family: 'poke-icons';
@@ -23,6 +38,27 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+.poke-icon-berry:before {
+  content: '\e912'; }
+
+.poke-icon-strain:before {
+  content: '\e913'; }
+
+.poke-icon-fairy:before {
+  content: '\e907'; }
+
+.poke-icon-flying:before {
+  content: '\e908'; }
+
+.poke-icon-ghost:before {
+  content: '\e90b'; }
+
+.poke-icon-ice:before {
+  content: '\e90d'; }
+
+.poke-icon-steel:before {
+  content: '\e919'; }
+
 .poke-icon-pokeball-open:before {
   content: '\e910'; }
 
@@ -32,14 +68,8 @@
 .poke-icon-poison:before {
   content: '\e90f'; }
 
-.poke-icon-steel:before {
-  content: '\e90b'; }
-
 .poke-icon-rock:before {
   content: '\e90c'; }
-
-.poke-icon-fairy:before {
-  content: '\e907'; }
 
 .poke-icon-dragon:before {
   content: '\e902'; }
@@ -49,12 +79,6 @@
 
 .poke-icon-dark:before {
   content: '\e90a'; }
-
-.poke-icon-ice:before {
-  content: '\e90d'; }
-
-.poke-icon-flying:before {
-  content: '\e908'; }
 
 .poke-icon-bug:before {
   content: '\f091'; }
@@ -82,6 +106,18 @@
 
 .poke-icon-fighting:before {
   content: '\e906'; }
+
+.osb-pocket-poke-holder header h1, .osb-pocket-poke-holder header nav {
+  display: inline-block; }
+
+.osb-pocket-poke-holder header nav {
+  margin-left: 10px;
+  position: relative;
+  top: -10px; }
+  .osb-pocket-poke-holder header nav li:last-child i {
+    font-size: 30px;
+    position: relative;
+    top: 6px; }
 
 .typeHolder {
   position: absolute;
@@ -117,7 +153,7 @@
 .type-grass {
   background-color: #0C851A; }
   .type-grass i {
-    color: #085d12; }
+    color: #55aa5f; }
 
 .type-ice {
   background-color: #A2D3DE; }
@@ -126,21 +162,23 @@
 
 .type-fighting {
   background-color: #CC0000; }
+  .type-fighting i {
+    color: rgba(0, 0, 0, 0.4); }
 
 .type-poison {
   background-color: #6600CC; }
   .type-poison i {
-    color: #944ddb; }
+    color: #a366e0; }
 
 .type-ground {
   background-color: #804B13; }
   .type-ground i {
-    color: #5a350d; }
+    color: #a6815a; }
 
 .type-flying {
-  background-color: #D2C1E3; }
+  background-color: #00DCF5; }
   .type-flying i {
-    color: #93879f; }
+    color: #009aac; }
 
 .type-psychic {
   background-color: #FF00EA; }
@@ -215,7 +253,7 @@
       bottom: 0;
       left: 0;
       z-index: 1; }
-  .osb-pocket-poke-holder .pokeList li {
+  .osb-pocket-poke-holder .pokeList .pokeListItem {
     box-sizing: border-box;
     text-transform: capitalize;
     -webkit-flex: 1 1 25%;
@@ -224,28 +262,33 @@
     border-bottom: 1px solid #000;
     background-color: #A8D7FF; }
     @media (max-width: 990px) {
-      .osb-pocket-poke-holder .pokeList li {
+      .osb-pocket-poke-holder .pokeList .pokeListItem {
         -webkit-flex: 1 1 33.333%;
         flex: 1 1 33.333%; } }
     @media (max-width: 640px) {
-      .osb-pocket-poke-holder .pokeList li {
+      .osb-pocket-poke-holder .pokeList .pokeListItem {
         -webkit-flex: 1 1 50%;
         flex: 1 1 50%; } }
-    .osb-pocket-poke-holder .pokeList li h2, .osb-pocket-poke-holder .pokeList li p {
+    .osb-pocket-poke-holder .pokeList .pokeListItem h2, .osb-pocket-poke-holder .pokeList .pokeListItem p {
       margin: 10px; }
-    .osb-pocket-poke-holder .pokeList li .details {
+    .osb-pocket-poke-holder .pokeList .pokeListItem .details {
       padding: 10px;
       margin: 0;
       background-color: #5AB0FA;
       border-top: 1px solid #000; }
-    .osb-pocket-poke-holder .pokeList li .details-list li {
+    .osb-pocket-poke-holder .pokeList .pokeListItem .details-list li {
       border-right: 0; }
-      .osb-pocket-poke-holder .pokeList li .details-list li:last-child {
+      .osb-pocket-poke-holder .pokeList .pokeListItem .details-list li:last-child {
         border-bottom: 0; }
-      .osb-pocket-poke-holder .pokeList li .details-list li:first-child {
+      .osb-pocket-poke-holder .pokeList .pokeListItem .details-list li:first-child {
         border-top: 1px solid #000; }
-    .osb-pocket-poke-holder .pokeList li .moves li {
+    .osb-pocket-poke-holder .pokeList .pokeListItem .moves li {
       width: 50%;
       display: inline-block; }
+
+.osb-pocket-poke-holder .pokeEvol {
+  border-top: 1px solid #000; }
+  .osb-pocket-poke-holder .pokeEvol li h3, .osb-pocket-poke-holder .pokeEvol li h4, .osb-pocket-poke-holder .pokeEvol li h5 {
+    margin: 10px 0; }
 
 /*# sourceMappingURL=osbPocketPoke.css.map */
